@@ -5,8 +5,11 @@ Please visit http://aegisub.net to download latest version
 
 - Support reading SSA/ASS files with intermixed V4 and V4+ Styles sections (jfs)
 - Fixed loading of sections with unexpected cases. (AMZ)
-- Made Audio Spectrum calculation/drawing code use multithreading, resulting in a significant speedup on SMP (eg. dual-core) systems (jfs)
-- Changed palette for audio spectrum (jfs)
+- Changes to Audio Spectrum: (jfs)
+  o Calculation/drawing code is now multithreaded, meaning it runs faster on SMP (eg. dual-core) systems
+  o The palette is changed
+  o Rendering now more accurately represents actual signal power
+  o Use vertical zoom slider to amplify/dampen displayed signal strength (useful for better visualisation of quiet sections, or easier picking out the dominating frequencies in noisy sections)
 
 
 = 1.10 beta - 2006.08.07 ===========================
